--- a/MapMaven/MapMaven.csproj
+++ b/MapMaven/MapMaven.csproj
@@ -81,25 +81,25 @@
     <ItemGroup>
       <PackageReference Include="BeatSaber.SongHashing" Version="1.2.0" />
       <PackageReference Include="BeatSaberPlaylistsLib" Version="1.6.6" />
-      <PackageReference Include="Blazor-ApexCharts" Version="3.3.0" />
+      <PackageReference Include="Blazor-ApexCharts" Version="3.4.0" />
       <PackageReference Include="Clowd.Squirrel" Version="2.11.1" />
-      <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="7.0.0-rc.1" />
+      <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="7.0.0" />
       <PackageReference Include="Markdig" Version="0.37.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.10.40170" />
-	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240607001" />
-      <PackageReference Include="MudBlazor" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240627000" />
+      <PackageReference Include="MudBlazor" Version="7.6.0" />
       <PackageReference Include="NAudio" Version="2.2.1" />
       <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
       <PackageReference Include="PInvoke.User32" Version="0.7.124" />
       <PackageReference Include="securifybv.ShellLink" Version="0.1.0" />
       <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-      <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
+      <PackageReference Include="System.Drawing.Common" Version="8.0.7" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 
@@ -109,9 +109,9 @@
     </ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.61" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.61" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.61" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.80" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.80" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.80" />
 	</ItemGroup>
 
 	<PropertyGroup>
